Spring Security Implementation
Spring Security Implementation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=breno.blog
-spring.datasource.url=jdbc:postgresql://localhost:5432/blog-breno
+spring.datasource.url=jdbc:postgresql://localhost:5432/blog-breno-v2
 spring.datasource.username=postgres
 spring.datasource.password=boardinfinity
 spring.jpa.hibernate.ddl-auto=update
